SVN
- Allow for a 0 offset in all ingres field functions 
- Update build scripts for OpenVMS CSWS PHP 2.0

2.2.1
- Fix bug 16688 - EXECUTE PROCEDURE statements fail with DESCRIBE INPUT

2.2.0
- Fix bug 16668 - Update ii_result->tranhandle after calling IIapì_autocommit()
- Add support for fetching/putting LONG NVARCHAR data
- Fix bug 16616 - auto commit emulation failed with a SELECT followed by an INSERT
- Fix bug 16075 - improper clean up of old resource values causing SEGV
- Add arginfo to provide reflection access to the internals
- When II_SYSTEM is not defined provide a link to the documentation showing how to set it up
- Fix bug 16539 - Stale connections fail to be disconnected using IIapi_disconnect()
- Fix bug 16539 - Binding UTF-8 data causes an additional NULL to be sent to the server
- Fix GPF on Windows with sql.safe_mode and undefined ingres.default_database
- Fix ingres_prepare() and ingres_execute() so they actually work
- Make sql_safe_mode use ingres.default_database
- ingres_fetch_proc_return should return NULL if no value is available
- Add ingres_unbuffered_query()
- Handle leading white-space characters in query detection (thanks Alex Trofast)

2.1.0
- Add ingres.fetch_buffer_size to configure to the number of rows ingres_query() will fetch.
- Add ingres_charset() to fetch the installation II_CHARSETxx value
- Add ingres.describe ini setting to allow disabling of DESCRIBE INPUT if desired
- Add support for DESCRIBE INPUT
- Add ingres_escape_string()
- Add ingres_result_seek() to support row positioning

2.0.2
- Fix corrupt Ingres MONEY to PHP DOUBLE conversions
- Eliminate memory leak when ingres_free_result() is not called
- Fix ingres_field_name() so it returns the correct column name
- Fix SEGV in php_ii_convert_data() when converting DATE to STRING
- Enable the extension to build on Mac OS X and HP-UX
- Reduce the number of emalloc calls in php_ii_fetch()
- Clean up proto entries in ingres.c