@@ -91,6 +91,9 @@ http://pear.php.net/dtd/package-2.0.xsd">
     <file baseinstalldir="ingres" name="test_054.phpt" role="test" />
     <file baseinstalldir="ingres" name="bug_15586_newlines.phpt" role="test" />
     <file baseinstalldir="ingres" name="bug_15586.phpt" role="test" />
+    <file baseinstalldir="ingres" name="bug_16752_1.phpt" role="test" />
+    <file baseinstalldir="ingres" name="bug_16752_2.phpt" role="test" />
+    <file baseinstalldir="ingres" name="bug_16752_3.phpt" role="test" />
    </dir> <!-- //tests -->
    <file baseinstalldir="ingres" name="BUILD.COM" role="src" />
    <file baseinstalldir="ingres" name="CHANGELOG" role="doc" />
