@@ -1,4 +1,5 @@
 SVN
+- Fix bug 16752 - Send all string values as IIAPI_VCH_TYPE
 - Allow for a 0 offset in all ingres field functions 
 - Update build scripts for OpenVMS CSWS PHP 2.0
 
